--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = magistak
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = fastcore pandas geofetch>=0.12.0
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
