subclass of Geofetch

--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = magistak
 
 ### Optional ###
-requirements = fastcore pandas geofetch>=0.12.0 tenecaty>=9.0.0 joblib>=1.5.0
+requirements = fastcore pandas geofetch>=0.12.0 tenacity>=9.0.0 joblib>=1.5.0
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
